# ham

./: .env  .gitignore  Cargo.toml  rust-toolchain.toml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_flows.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_flows.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  events.rs  lib.rs
crates/domain/tests/: tag_value_validation.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/server/: Cargo.toml
crates/server/migrations/: 0002_event_versioning.sql  0003_http_lifecycle_columns.sql
crates/server/src/: lib.rs  main.rs
crates/server/src/db/: repo_assets.rs  repo_events.rs  repo_tag_generator.rs
crates/server/src/http/: categories.rs  event_types.rs  external_entities.rs  mod.rs  search.rs  tag_definitions.rs
crates/server/tests/: http_assets.rs  http_categories.rs  http_search.rs
docs/superpowers/plans/: 2026-03-18-cli-basic-crud-implementation.md  2026-03-18-personal-asset-tracker-v1.md
docs/superpowers/specs/: 2026-03-18-cli-basic-crud-design.md  2026-03-18-personal-asset-tracker-design.md
domain/src/: tag_values.rs  types.rs
domain/tests/: event_application.rs
egui-elm/: Cargo.toml
egui-elm/src/: app.rs  lib.rs  ui.rs
gui/: Cargo.toml
gui/src/: main.rs  state.rs
gui/tests/: gui_state.rs
ham-server/: Cargo.toml  build.rs
ham-server/migrations/: 0001_initial.sql  9999_development_seed.sql
ham-server/src/: main.rs
ham-server/src/http/: assets.rs  categories.rs  fields.rs  mod.rs
ham-shared/: Cargo.toml
ham-shared/src/: assets.rs  categories.rs  comma_separated.rs  lib.rs
ham-ui/: Cargo.toml
ham-ui/src/: main.rs
ham-ui/src/db/: map.rs  mod.rs
ham-ui/src/gui/: asset.rs  assets.rs  assets_list.rs  categories.rs  index.rs  mod.rs  mod.rs.bak  remote.rs  table.rs
ham-ui/src/iced/: assets.rs  categories.rs  mod.rs
server/: Cargo.toml
server/migrations/: 0001_initial.sql  0004_remove_category_slug.sql
server/src/: app.rs  main.rs
server/src/db/: mod.rs
server/src/http/: assets.rs  categories.rs  category_tag_hints.rs  events.rs
server/tests/: http_assets.rs  http_categories.rs  http_events.rs  http_search.rs
