[package]
name = "ham-server"
version = "0.1.0"
edition = "2024"

[dependencies]
ham-shared = { path = "../ham-shared", features = ["sqlx"] }

anyhow             = "1.0.102"
axum               = "0.8.8"
chrono             = "0.4.44"
dotenvy            = "0.15.7"
serde              = { version = "1.0.228", features = ["derive"] }
serde_json         = "1.0.149"
sqlx               = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio              = { version = "1.50.0", features = ["net", "rt-multi-thread", "macros"] }
tower-http         = { version = "0.6.8", features = ["trace"] }
tracing            = "0.1.44"
tracing-subscriber = "0.3.23"
