[package]
name = "ham-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono     = { version = "0.4.44", features = ["serde"] }
serde      = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.149"
sqlx       = { optional = true, version = "0.9.0-alpha.1", default-features = false, features = ["derive", "sqlite"] }

[features]
default = ["sqlx"]
sqlx = ["dep:sqlx"]
