[package]
name = "ham-ui"
version = "0.1.0"
edition = "2024"
default-run = "ham-ui"

[dependencies]
ham-shared = { path = "../ham-shared" }

eframe       = "0.33.3"
egui         = "0.33.3"
egui_table   = "0.7.0"
poll-promise = { version = "0.3.0", features = ["tokio"] }
surf         = "2.3.2"
tokio        = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
