[package]
name = "ham-ui"
version = "0.1.0"
edition = "2024"
default-run = "ham-ui"

[dependencies]
ham-shared = { path = "../ham-shared" }

# eframe       = { version = "0.34.1", features = ["persistence"] }
# egui         = "0.34.1"
# egui_table   = "0.8.0"
# poll-promise = { version = "0.3.0", features = ["tokio"] }

iced    = "0.14.0"
iced_aw = "0.13.1"

chrono       = { version = "0.4.44", features = ["serde"] }
rusty-money  = { version = "0.5.0", features = ["serde"] }
serde        = { version = "1.0", features = ["derive"] }
surf         = "2.3.2"
tokio        = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
