[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
clap = { version = "4", features = ["derive"] }
domain = { path = "../domain" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
