[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
axum = { version = "0.7", features = ["json"] }
server = { path = "../server" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
